--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -3,13 +3,64 @@
 .sidebar {
 	width: 20%;
 	height: 100vh;
-	border-right: 1px solid;
+	border-right: 0.1rem solid;
+
+	.sidebar-kanban {
+		padding: 0.5rem;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		gap: 0.3rem;
+
+		svg {
+			color: $purplish_blue;
+		}
+
+		h2 {
+			margin: 0.5rem;
+		}
+	}
+
+	.sidebar-boards {
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+
+		.sidebar-boards-all {
+			text-transform: uppercase;
+			font-weight: 500;
+			padding-bottom: 1rem;
+		}
+
+		.sidebar-board-card {
+			display: flex;
+			justify-content: left;
+			align-items: center;
+			width: 75%;
+			gap: 0.8rem;
+			padding: 0.5rem 0;
+			font-weight: 600;
+		}
+
+		.sidebar-board-card.selected {
+			background-color: $purplish_blue;
+			border: 0.1rem solid $purplish_blue;
+			border-bottom-right-radius: 1.5rem;
+			border-top-right-radius: 1.5rem;
+			color: $white;
+		}
+	}
 }
 
 .sidebar.dark {
 	background-color: $dark_gray;
 	border-color: $gray;
 	color: $white;
+
+	.sidebar-boards {
+		color: $gray;
+	}
 }
 
 .sidebar.light {
