Replace px with rem

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -6,7 +6,7 @@
 	justify-content: space-between;
 	align-items: center;
 	padding: 0.5rem 1rem;
-	border-bottom: 1px solid;
+	border-bottom: 0.1rem solid;
 
 	.header-board-title {
 		margin: 0.5rem;
