Add media queries for responsive design

--- a/src/App.scss
+++ b/src/App.scss
@@ -4,3 +4,15 @@
 	display: flex;
 	flex-direction: row;
 }
+
+@media screen and (min-width: 1024px) {
+	//Desktop
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+	//Tablet
+}
+
+@media screen and (max-width: 767px) {
+	//Mobile
+}
