--- a/src/components/board/board.scss
+++ b/src/components/board/board.scss
@@ -1,9 +1,5 @@
 @import "../../assets/variables.scss";
 
-.board {
-	width: 80%;
-}
-
 .board.dark {
 	background-color: $dark_background;
 	color: $white;
@@ -12,4 +8,25 @@
 .board.light {
 	background-color: $light_background;
 	color: $gray;
+}
+
+@media screen and (min-width: 1024px) {
+	//Desktop
+	.board {
+		width: 80%;
+	}
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+	//Tablet
+	.board {
+		width: 100%;
+	}
+}
+
+@media screen and (max-width: 767px) {
+	//Mobile
+	.board {
+		width: 100%;
+	}
 }
