--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -79,3 +79,15 @@
 	border-color: $blueish_gray;
 	color: $gray;
 }
+
+@media screen and (min-width: 1024px) {
+	//Desktop
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+	//Tablet
+}
+
+@media screen and (max-width: 767px) {
+	//Mobile
+}
