--- a/src/components/popups/popup.scss
+++ b/src/components/popups/popup.scss
@@ -9,14 +9,15 @@
 
 	.box {
 		position: relative;
-		width: 50%;
+		width: 30%;
 		margin: 0 auto;
 		height: auto;
-		max-height: 70vh;
-		margin-top: calc(100vh - 85vh);
+		max-height: calc(100vh - 3rem);
+		margin-top: calc(100vh - 85vh - 1.5rem);
 		border-radius: 0.25rem;
 		padding: 0.25rem;
 		overflow: auto;
+		box-shadow: 0.125rem 0.125rem 0.25rem $black;
 
 		.close {
 			float: right;
