--- a/src/App.scss
+++ b/src/App.scss
@@ -11,6 +11,9 @@
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
 	//Tablet
+	h2 {
+		font-size: 1.25rem;
+	}
 }
 
 @media screen and (max-width: 767px) {
