--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -1,7 +1,8 @@
 @import "../../assets/variables.scss";
 
 .sidebar {
-	width: 20%;
+	width: 18rem;
+	min-width: 12rem;
 	height: 100vh;
 	border-right: 0.1rem solid;
 
@@ -86,8 +87,15 @@
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
 	//Tablet
+	.sidebar {
+		width: 15rem;
+	}
 }
 
 @media screen and (max-width: 767px) {
 	//Mobile
+
+	.sidebar {
+		display: none;
+	}
 }
