Add title and overflow for board names

--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -48,6 +48,12 @@
 			&:hover {
 				cursor: pointer;
 			}
+
+			span {
+				white-space: nowrap;
+				overflow: hidden;
+				text-overflow: ellipsis;
+			}
 		}
 
 		.sidebar-board-card.selected {
