--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -75,15 +75,20 @@
 		}
 	}
 
-	.sidebar-hide-button {
+	.sidebar-bottom {
 		margin-top: auto;
 		display: flex;
-		align-items: center;
-		padding: 1.5rem;
-		gap: 0.5rem;
-		font-size: 0.75rem;
-		cursor: pointer;
-		color: $gray;
+		flex-direction: column;
+
+		.sidebar-hide-button {
+			display: flex;
+			align-items: center;
+			padding: 1rem 2rem;
+			gap: 0.5rem;
+			font-size: 0.75rem;
+			cursor: pointer;
+			color: $gray;
+		}
 	}
 }
 
