--- a/src/components/popups/newTask/new-task-popup.scss
+++ b/src/components/popups/newTask/new-task-popup.scss
@@ -35,11 +35,48 @@
 	}
 
 	.task-subtasks {
+		.subtasks-list {
+			display: flex;
+			flex-direction: column;
+			gap: 0.5rem;
+			padding-bottom: 0.5rem;
+
+			.subtask {
+				display: flex;
+				flex-direction: row;
+				gap: 0.25rem;
+				background-color: inherit;
+
+				.subtask-title {
+					border: 0.063rem solid $gray;
+					border-radius: 0.25rem;
+					padding: 0.25rem;
+					outline: none;
+					height: 2rem;
+					width: 100%;
+				}
+
+				.subtask-icons {
+					display: none;
+				}
+
+				&:hover {
+					.subtask-icons {
+						display: flex;
+						gap: 0.5rem;
+						justify-items: center;
+						align-items: center;
+						cursor: pointer;
+					}
+				}
+			}
+		}
+
 		.task-new-subtask {
 			display: flex;
 			gap: 0.5rem;
 			align-items: center;
-			padding: 0.5rem 0;
+			padding-bottom: 0.5rem;
 
 			input {
 				width: 100%;
