--- a/src/components/popups/popup.scss
+++ b/src/components/popups/popup.scss
@@ -1,6 +1,7 @@
 @import "../../assets/variables.scss";
 
 .popup-box {
+	background-color: rgba(0, 0, 0, 0.5);
 	position: fixed;
 	width: 100%;
 	height: 100vh;
