--- a/src/components/popups/popup.scss
+++ b/src/components/popups/popup.scss
@@ -45,6 +45,72 @@
 					border-color: $red_error;
 				}
 			}
+
+			.inputs-with-errors {
+				.error {
+					color: $red_error;
+					font-size: 0.75rem;
+					font-weight: 600;
+					float: right;
+					padding-right: 3rem;
+					padding-bottom: 0.25rem;
+				}
+
+				.new-inputs {
+					height: 2rem;
+					width: 100%;
+					display: flex;
+					gap: 0.5rem;
+					justify-content: center;
+					align-items: center;
+
+					.inputs {
+						display: flex;
+						justify-content: space-between;
+						align-items: center;
+						width: 100%;
+						border: 0.063rem solid $gray;
+						border-radius: 0.25rem;
+						padding: 0 0.5rem;
+
+						input[type="text"] {
+							background-color: inherit;
+							width: 80%;
+							height: 2rem;
+							padding: 0.25rem;
+							border: none;
+							outline: none;
+						}
+
+						input[type="color"] {
+							appearance: none;
+							background: none;
+							border: none;
+							width: 2rem;
+							height: 2rem;
+							border-radius: 50%;
+							cursor: pointer;
+
+							&::-webkit-color-swatch {
+								border: none;
+							}
+						}
+
+						input[type="color"]::-webkit-color-swatch-wrapper,
+						input[type="color"]::-webkit-color-swatch {
+							border-radius: 50%;
+						}
+
+						&.error {
+							border-color: $red_error;
+						}
+					}
+
+					svg {
+						cursor: pointer;
+					}
+				}
+			}
 		}
 	}
 }
@@ -55,6 +121,16 @@
 			background-color: $dark_gray;
 			color: $white;
 			box-shadow: 0.125rem 0.125rem 0.25rem $black;
+
+			.box-content {
+				.new-inputs {
+					.inputs {
+						input[type="text"] {
+							color: $white;
+						}
+					}
+				}
+			}
 		}
 	}
 }
@@ -73,6 +149,18 @@
 			.box-content {
 				h2 {
 					color: $black;
+				}
+
+				.new-inputs {
+					.inputs {
+						input[type="text"] {
+							color: $black;
+						}
+					}
+
+					svg {
+						color: $gray;
+					}
 				}
 			}
 		}
