--- a/src/components/popups/popup.scss
+++ b/src/components/popups/popup.scss
@@ -111,6 +111,38 @@
 					}
 				}
 			}
+
+			.actionable-value {
+				background-color: inherit;
+				height: 2rem;
+				display: flex;
+				gap: 1rem;
+
+				.actionable-value-details {
+					width: 100%;
+					border: 0.063rem solid $gray;
+					border-radius: 0.25rem;
+					padding: 0.25rem;
+
+					svg {
+						margin-right: 0.5rem;
+					}
+				}
+
+				.actionable-value-icons {
+					display: none;
+				}
+
+				&:hover {
+					.actionable-value-icons {
+						display: flex;
+						gap: 0.5rem;
+						justify-items: center;
+						align-items: center;
+						cursor: pointer;
+					}
+				}
+			}
 		}
 	}
 }
@@ -129,6 +161,10 @@
 							color: $white;
 						}
 					}
+				}
+
+				.actionable-value {
+					color: $white;
 				}
 			}
 		}
@@ -159,6 +195,14 @@
 					}
 
 					svg {
+						color: $gray;
+					}
+				}
+
+				.actionable-value {
+					color: $black;
+
+					.actionable-value-icons {
 						color: $gray;
 					}
 				}
