--- a/src/components/popups/popup.scss
+++ b/src/components/popups/popup.scss
@@ -91,6 +91,25 @@
 			}
 		}
 	}
+
+	::-webkit-scrollbar {
+		width: 1rem;
+	}
+
+	::-webkit-scrollbar-track {
+		background-color: transparent;
+	}
+
+	::-webkit-scrollbar-thumb {
+		background-color: transparent;
+		border-radius: 0.7rem;
+		border: 0.25rem solid transparent;
+		background-clip: content-box;
+	}
+
+	::-webkit-scrollbar-thumb:hover {
+		background-color: $gray;
+	}
 }
 
 .dark-theme {
