--- a/src/components/header/components/board-drop-down-menu.scss
+++ b/src/components/header/components/board-drop-down-menu.scss
@@ -8,18 +8,46 @@
 	z-index: 9999;
 	padding: 0.25rem 0;
 	border-radius: 0.5rem;
-	background-color: $dark_gray;
-	border: 1px solid $gray;
+	border: 0.063rem solid;
 	width: 8rem;
 
 	ul {
 		list-style-type: none;
 		margin: 0;
-		padding: 0.25rem;
-		padding-left: 1rem;
+		padding: 0;
 
 		li {
+			padding: 0.25rem;
+			padding-left: 1rem;
 			cursor: pointer;
+
+			&:hover {
+				font-weight: bold;
+			}
+		}
+	}
+}
+
+.dark-theme {
+	.dropdown-menu {
+		background-color: $dark_gray;
+		border-color: $gray;
+		color: $white;
+
+		li:hover {
+			background-color: rgba(0, 0, 0, 0.5);
+		}
+	}
+}
+
+.light-theme {
+	.dropdown-menu {
+		background-color: $white;
+		border-color: $blueish_gray;
+		color: $gray;
+
+		li:hover {
+			background-color: rgba(101, 94, 198, 0.3);
 		}
 	}
 }
